--- a/nestjs-backend/package.json
+++ b/nestjs-backend/package.json
@@ -35,6 +35,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
@@ -46,6 +47,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "mysql2": "^3.14.0",
     "prettier": "^3.4.2",
