fixed server/client component issues & added prisma seeding

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "format": "prettier --write ."
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "prettier": {
     "plugins": [
       "prettier-plugin-tailwindcss"
